--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,141 @@ scene.html
 output.stp
 OML_offset.stp
 OML.stp
+stored_files/blade_xs0.msh
+stored_files/blade_xs1.msh
+stored_files/blade_xs2.msh
+stored_files/blade_xs3.msh
+stored_files/blade_xs4.msh
+stored_files/blade_xs5.msh
+stored_files/blade_xs6.msh
+stored_files/blade_xs7.msh
+stored_files/blade_xs8.msh
+stored_files/projections/0xh0Io.pickle
+stored_files/projections/1ZQiV3.pickle
+stored_files/projections/2II0Mx.pickle
+stored_files/projections/2ScNeB.pickle
+stored_files/projections/3sLKKr.pickle
+stored_files/projections/3uyXBW.pickle
+stored_files/projections/3zthan.pickle
+stored_files/projections/4Vhgzr.pickle
+stored_files/projections/4woFDG.pickle
+stored_files/projections/4Yx8fT.pickle
+stored_files/projections/4Z1RJg.pickle
+stored_files/projections/5cw1JR.pickle
+stored_files/projections/5iRyDd.pickle
+stored_files/projections/6zm1YS.pickle
+stored_files/projections/7FwKXc.pickle
+stored_files/projections/7m2UU7.pickle
+stored_files/projections/7xraM4.pickle
+stored_files/projections/8LCXCk.pickle
+stored_files/projections/8oAXVG.pickle
+stored_files/projections/9DCDNh.pickle
+stored_files/projections/30Ijpu.pickle
+stored_files/projections/36RFfK.pickle
+stored_files/projections/55Svzt.pickle
+stored_files/projections/a6SKBp.pickle
+stored_files/projections/ADstMm.pickle
+stored_files/projections/Ae2c6z.pickle
+stored_files/projections/akeYGt.pickle
+stored_files/projections/AwIUYZ.pickle
+stored_files/projections/BDwpwg.pickle
+stored_files/projections/BGTaiv.pickle
+stored_files/projections/biluA2.pickle
+stored_files/projections/bQJABq.pickle
+stored_files/projections/C3lrDV.pickle
+stored_files/projections/cDRyjA.pickle
+stored_files/projections/cRSamf.pickle
+stored_files/projections/D7QYu8.pickle
+stored_files/projections/dGjrKo.pickle
+stored_files/projections/dKAFze.pickle
+stored_files/projections/dLfqsV.pickle
+stored_files/projections/DsCbxu.pickle
+stored_files/projections/dVtYH6.pickle
+stored_files/projections/dywT04.pickle
+stored_files/projections/EbTR4k.pickle
+stored_files/projections/ebXh78.pickle
+stored_files/projections/eqBKtE.pickle
+stored_files/projections/eqXAhs.pickle
+stored_files/projections/eUNvLM.pickle
+stored_files/projections/FclYyX.pickle
+stored_files/projections/foVjyB.pickle
+stored_files/projections/fzJ04g.pickle
+stored_files/projections/G0bsXB.pickle
+stored_files/projections/gdsTKm.pickle
+stored_files/projections/Gl0yNd.pickle
+stored_files/projections/gnTRrW.pickle
+stored_files/projections/gy2DPf.pickle
+stored_files/projections/HdxYno.pickle
+stored_files/projections/HMAPva.pickle
+stored_files/projections/HSif53.pickle
+stored_files/projections/HW89K8.pickle
+stored_files/projections/iaYI1k.pickle
+stored_files/projections/ieEaly.pickle
+stored_files/projections/Ihqor1.pickle
+stored_files/projections/J0qBFo.pickle
+stored_files/projections/juFKbf.pickle
+stored_files/projections/kErkPV.pickle
+stored_files/projections/KesM4Z.pickle
+stored_files/projections/keyxeX.pickle
+stored_files/projections/kHpbay.pickle
+stored_files/projections/kjoX6w.pickle
+stored_files/projections/KMClyw.pickle
+stored_files/projections/KnhmOu.pickle
+stored_files/projections/L3eAuN.pickle
+stored_files/projections/L7neve.pickle
+stored_files/projections/Le9IYa.pickle
+stored_files/projections/lJUE9y.pickle
+stored_files/projections/lLB0ix.pickle
+stored_files/projections/lvHRMF.pickle
+stored_files/projections/LZlf6C.pickle
+stored_files/projections/m9njec.pickle
+stored_files/projections/MD5puh.pickle
+stored_files/projections/mhclgW.pickle
+stored_files/projections/mmSnCx.pickle
+stored_files/projections/N3Fa7r.pickle
+stored_files/projections/N7aqs4.pickle
+stored_files/projections/NfbiOb.pickle
+stored_files/projections/Ngjs9A.pickle
+stored_files/projections/nLeWPn.pickle
+stored_files/projections/NMS8zC.pickle
+stored_files/projections/oGLHnc.pickle
+stored_files/projections/ohdVKy.pickle
+stored_files/projections/OlrBYd.pickle
+stored_files/projections/omPuIz.pickle
+stored_files/projections/oYRFyC.pickle
+stored_files/projections/p88hfA.pickle
+stored_files/projections/pBLZe0.pickle
+stored_files/projections/PvrBrA.pickle
+stored_files/projections/qbeDIh.pickle
+stored_files/projections/qOjP9F.pickle
+stored_files/projections/QUIkzs.pickle
+stored_files/projections/R6shfB.pickle
+stored_files/projections/rMzbOB.pickle
+stored_files/projections/Ry9Cf3.pickle
+stored_files/projections/ryFVr8.pickle
+stored_files/projections/S3GdlI.pickle
+stored_files/projections/SyTzPT.pickle
+stored_files/projections/THgrae.pickle
+stored_files/projections/TIKG90.pickle
+stored_files/projections/tJMMyz.pickle
+stored_files/projections/UWO7xv.pickle
+stored_files/projections/uxjaNf.pickle
+stored_files/projections/Vi3r0O.pickle
+stored_files/projections/VtnmsY.pickle
+stored_files/projections/WeFB5B.pickle
+stored_files/projections/wGEv6w.pickle
+stored_files/projections/WnSnYP.pickle
+stored_files/projections/X5euPQ.pickle
+stored_files/projections/x6WR2n.pickle
+stored_files/projections/XrKMq3.pickle
+stored_files/projections/xygRv1.pickle
+stored_files/projections/y8gK8P.pickle
+stored_files/projections/YdbJW8.pickle
+stored_files/projections/yeRin9.pickle
+stored_files/projections/YlIFMi.pickle
+stored_files/projections/YVTnm2.pickle
+stored_files/projections/YYGzM4.pickle
+stored_files/projections/ZIYHxs.pickle
+stored_files/projections/ZLLUub.pickle
+stored_files/projections/ztNYhR.pickle
+stored_files/projections/Zu9f5q.pickle
