refactoring for xs mesh creation

--- a/.gitignore
+++ b/.gitignore
@@ -138,379 +138,4 @@ top_level_req.in
 top_level_req.txt
 _autosummary
 _conf_master.py
-stored_files/projections/0bbNd6.pickle
-stored_files/projections/0iPVD3.pickle
-stored_files/projections/0q7a8Z.pickle
-stored_files/projections/0TLX34.pickle
-stored_files/projections/0UCWTF.pickle
-stored_files/projections/0ZWRzb.pickle
-stored_files/projections/1GRj56.pickle
-stored_files/projections/1pFqgU.pickle
-stored_files/projections/2dvbti.pickle
-stored_files/projections/2EZHhk.pickle
-stored_files/projections/2gnpsi.pickle
-stored_files/projections/2HectU.pickle
-stored_files/projections/2JO47n.pickle
-stored_files/projections/2NDnkH.pickle
-stored_files/projections/2nnJ4o.pickle
-stored_files/projections/2YcY6u.pickle
-stored_files/projections/3SafCU.pickle
-stored_files/projections/4mHr78.pickle
-stored_files/projections/4T9ILh.pickle
-stored_files/projections/4vkjLE.pickle
-stored_files/projections/5F9qRO.pickle
-stored_files/projections/5GnLCM.pickle
-stored_files/projections/5qmFI1.pickle
-stored_files/projections/5rbFp4.pickle
-stored_files/projections/7fvHuc.pickle
-stored_files/projections/7mstkq.pickle
-stored_files/projections/7QlBri.pickle
-stored_files/projections/7WWGbh.pickle
-stored_files/projections/8ypEEU.pickle
-stored_files/projections/9uec0I.pickle
-stored_files/projections/15QqbH.pickle
-stored_files/projections/23xrGw.pickle
-stored_files/projections/50Hqj9.pickle
-stored_files/projections/86QL1A.pickle
-stored_files/projections/94JQ5F.pickle
-stored_files/projections/8029Sd.pickle
-stored_files/projections/A3pybE.pickle
-stored_files/projections/a5nHm1.pickle
-stored_files/projections/a8kRP4.pickle
-stored_files/projections/A8maKa.pickle
-stored_files/projections/aIUBk0.pickle
-stored_files/projections/ALfnoW.pickle
-stored_files/projections/amHXNA.pickle
-stored_files/projections/AmSC9N.pickle
-stored_files/projections/anVtY8.pickle
-stored_files/projections/auSGRl.pickle
-stored_files/projections/bjATRM.pickle
-stored_files/projections/BT4wGU.pickle
-stored_files/projections/BWzRfd.pickle
-stored_files/projections/bxCJOa.pickle
-stored_files/projections/BxfFWY.pickle
-stored_files/projections/c2L8mc.pickle
-stored_files/projections/cfFmLA.pickle
-stored_files/projections/CT0NBn.pickle
-stored_files/projections/CZq4xR.pickle
-stored_files/projections/d9XqkL.pickle
-stored_files/projections/dcQIQ6.pickle
-stored_files/projections/DdPC31.pickle
-stored_files/projections/djd3Yt.pickle
-stored_files/projections/dpjX1d.pickle
-stored_files/projections/dPXjjd.pickle
-stored_files/projections/DQqLbN.pickle
-stored_files/projections/DreR9e.pickle
-stored_files/projections/dRlVLL.pickle
-stored_files/projections/DVJdta.pickle
-stored_files/projections/efAIHS.pickle
-stored_files/projections/Ekd7uN.pickle
-stored_files/projections/ekWlN9.pickle
-stored_files/projections/eNOFt4.pickle
-stored_files/projections/Es4BLp.pickle
-stored_files/projections/eUGfQK.pickle
-stored_files/projections/ezKH0G.pickle
-stored_files/projections/F2n87v.pickle
-stored_files/projections/f4PitX.pickle
-stored_files/projections/fMHjnX.pickle
-stored_files/projections/fMKj8j.pickle
-stored_files/projections/fMLIDb.pickle
-stored_files/projections/FOgO75.pickle
-stored_files/projections/ft9b5p.pickle
-stored_files/projections/fwgoD6.pickle
-stored_files/projections/FxJSvT.pickle
-stored_files/projections/g4wsFg.pickle
-stored_files/projections/G9qBht.pickle
-stored_files/projections/GggeGz.pickle
-stored_files/projections/ghDn29.pickle
-stored_files/projections/GHLXfZ.pickle
-stored_files/projections/gKNHWt.pickle
-stored_files/projections/gku3H8.pickle
-stored_files/projections/GvpAll.pickle
-stored_files/projections/GYZfmb.pickle
-stored_files/projections/H2GfXv.pickle
-stored_files/projections/H2iKEn.pickle
-stored_files/projections/h9P6Te.pickle
-stored_files/projections/HeUAaJ.pickle
-stored_files/projections/hFGhD5.pickle
-stored_files/projections/hGK9Qi.pickle
-stored_files/projections/hJNpGO.pickle
-stored_files/projections/hQZIsA.pickle
-stored_files/projections/hR3UI1.pickle
-stored_files/projections/hRYcRW.pickle
-stored_files/projections/HvCTIO.pickle
-stored_files/projections/I4uy1q.pickle
-stored_files/projections/I6J443.pickle
-stored_files/projections/iCKbCr.pickle
-stored_files/projections/idACxi.pickle
-stored_files/projections/Ijgne3.pickle
-stored_files/projections/iKBOkQ.pickle
-stored_files/projections/IVyQpM.pickle
-stored_files/projections/iWgzXp.pickle
-stored_files/projections/J3LMGg.pickle
-stored_files/projections/jAi73n.pickle
-stored_files/projections/JI8R2n.pickle
-stored_files/projections/JLn8gE.pickle
-stored_files/projections/jq6IV7.pickle
-stored_files/projections/jS10SK.pickle
-stored_files/projections/JWpFXQ.pickle
-stored_files/projections/k9Hl0N.pickle
-stored_files/projections/KAcYhG.pickle
-stored_files/projections/kjpjFg.pickle
-stored_files/projections/KL25y0.pickle
-stored_files/projections/KmO3C5.pickle
-stored_files/projections/kuHrSA.pickle
-stored_files/projections/L0to4R.pickle
-stored_files/projections/L8p97v.pickle
-stored_files/projections/L65V0S.pickle
-stored_files/projections/lHD4Rp.pickle
-stored_files/projections/LmDHpR.pickle
-stored_files/projections/m9nqR9.pickle
-stored_files/projections/m11wUX.pickle
-stored_files/projections/maHB5V.pickle
-stored_files/projections/mGeQto.pickle
-stored_files/projections/MgTgiQ.pickle
-stored_files/projections/N2lpo0.pickle
-stored_files/projections/n56ipA.pickle
-stored_files/projections/nABBHk.pickle
-stored_files/projections/name_space_dict.pickle
-stored_files/projections/NboVg6.pickle
-stored_files/projections/nbXPhg.pickle
-stored_files/projections/nElcU7.pickle
-stored_files/projections/NN78yd.pickle
-stored_files/projections/NN98Q2.pickle
-stored_files/projections/nUGSKl.pickle
-stored_files/projections/nv2gmP.pickle
-stored_files/projections/nwYvvo.pickle
-stored_files/projections/oBz7nw.pickle
-stored_files/projections/oHDSMY.pickle
-stored_files/projections/ojFCdy.pickle
-stored_files/projections/OkrKXb.pickle
-stored_files/projections/ookDPj.pickle
-stored_files/projections/OueAie.pickle
-stored_files/projections/oVifZf.pickle
-stored_files/projections/pEBkKp.pickle
-stored_files/projections/PJvYjW.pickle
-stored_files/projections/pkUSC1.pickle
-stored_files/projections/PohDa9.pickle
-stored_files/projections/pq2iA8.pickle
-stored_files/projections/prySsf.pickle
-stored_files/projections/pWDz8i.pickle
-stored_files/projections/QAjuqP.pickle
-stored_files/projections/qCV0wE.pickle
-stored_files/projections/qI0skU.pickle
-stored_files/projections/Qknlk2.pickle
-stored_files/projections/qR0wm0.pickle
-stored_files/projections/QTHxrZ.pickle
-stored_files/projections/QW0xe7.pickle
-stored_files/projections/qwB41b.pickle
-stored_files/projections/rcX9EH.pickle
-stored_files/projections/rGetUT.pickle
-stored_files/projections/RikXxy.pickle
-stored_files/projections/RiZAPz.pickle
-stored_files/projections/RlQdFz.pickle
-stored_files/projections/roRERF.pickle
-stored_files/projections/RPLE7E.pickle
-stored_files/projections/RWe3k2.pickle
-stored_files/projections/ryUgZo.pickle
-stored_files/projections/RzQkvF.pickle
-stored_files/projections/S551tB.pickle
-stored_files/projections/sa4R5Z.pickle
-stored_files/projections/sabk7W.pickle
-stored_files/projections/sd3I56.pickle
-stored_files/projections/segJgg.pickle
-stored_files/projections/Sf1Yi0.pickle
-stored_files/projections/Sfjeyp.pickle
-stored_files/projections/SKFyzb.pickle
-stored_files/projections/SLrj0x.pickle
-stored_files/projections/slyvK4.pickle
-stored_files/projections/Soxd4F.pickle
-stored_files/projections/svdFap.pickle
-stored_files/projections/SWSL5d.pickle
-stored_files/projections/t9Jinx.pickle
-stored_files/projections/tgoLys.pickle
-stored_files/projections/thKWcK.pickle
-stored_files/projections/TN2RKK.pickle
-stored_files/projections/Tom7U2.pickle
-stored_files/projections/TqlxPc.pickle
-stored_files/projections/tyRfdu.pickle
-stored_files/projections/TZaO7Q.pickle
-stored_files/projections/UAsCws.pickle
-stored_files/projections/uBWA1K.pickle
-stored_files/projections/uCe1iK.pickle
-stored_files/projections/UlYGJY.pickle
-stored_files/projections/v05QxK.pickle
-stored_files/projections/v43Km6.pickle
-stored_files/projections/VcPLN9.pickle
-stored_files/projections/vEvMID.pickle
-stored_files/projections/VFmhhU.pickle
-stored_files/projections/vHvjAq.pickle
-stored_files/projections/VhYXOs.pickle
-stored_files/projections/vIf5tJ.pickle
-stored_files/projections/VOmrL4.pickle
-stored_files/projections/vTltoo.pickle
-stored_files/projections/wirQOh.pickle
-stored_files/projections/wsEGDi.pickle
-stored_files/projections/wUeS7J.pickle
-stored_files/projections/xowF8m.pickle
-stored_files/projections/YLX5Zx.pickle
-stored_files/projections/YmE16N.pickle
-stored_files/projections/YMoKra.pickle
-stored_files/projections/yo95bd.pickle
-stored_files/projections/YsPwSc.pickle
-stored_files/projections/yynzur.pickle
-stored_files/projections/yz5yut.pickle
-stored_files/projections/z1uM0e.pickle
-stored_files/projections/Z4Vx8q.pickle
-stored_files/projections/za7K5T.pickle
-stored_files/projections/ZHCA3K.pickle
-stored_files/projections/zqq1o8.pickle
-stored_files/projections/ZRyLMQ.pickle
-stored_files/projections/zvTT7x.pickle
-stored_files/projections/zwhRCZ.pickle
-stored_files/projections/zxEW6l.pickle
-stored_files/imports/LPC_final_custom_blades_stored_import.pickle
-scene.x3d
-scene.npz
-scene.html
-output.stp
-OML_offset.stp
-OML.stp
-stored_files/blade_xs0.msh
-stored_files/blade_xs1.msh
-stored_files/blade_xs2.msh
-stored_files/blade_xs3.msh
-stored_files/blade_xs4.msh
-stored_files/blade_xs5.msh
-stored_files/blade_xs6.msh
-stored_files/blade_xs7.msh
-stored_files/blade_xs8.msh
-stored_files/projections/0xh0Io.pickle
-stored_files/projections/1ZQiV3.pickle
-stored_files/projections/2II0Mx.pickle
-stored_files/projections/2ScNeB.pickle
-stored_files/projections/3sLKKr.pickle
-stored_files/projections/3uyXBW.pickle
-stored_files/projections/3zthan.pickle
-stored_files/projections/4Vhgzr.pickle
-stored_files/projections/4woFDG.pickle
-stored_files/projections/4Yx8fT.pickle
-stored_files/projections/4Z1RJg.pickle
-stored_files/projections/5cw1JR.pickle
-stored_files/projections/5iRyDd.pickle
-stored_files/projections/6zm1YS.pickle
-stored_files/projections/7FwKXc.pickle
-stored_files/projections/7m2UU7.pickle
-stored_files/projections/7xraM4.pickle
-stored_files/projections/8LCXCk.pickle
-stored_files/projections/8oAXVG.pickle
-stored_files/projections/9DCDNh.pickle
-stored_files/projections/30Ijpu.pickle
-stored_files/projections/36RFfK.pickle
-stored_files/projections/55Svzt.pickle
-stored_files/projections/a6SKBp.pickle
-stored_files/projections/ADstMm.pickle
-stored_files/projections/Ae2c6z.pickle
-stored_files/projections/akeYGt.pickle
-stored_files/projections/AwIUYZ.pickle
-stored_files/projections/BDwpwg.pickle
-stored_files/projections/BGTaiv.pickle
-stored_files/projections/biluA2.pickle
-stored_files/projections/bQJABq.pickle
-stored_files/projections/C3lrDV.pickle
-stored_files/projections/cDRyjA.pickle
-stored_files/projections/cRSamf.pickle
-stored_files/projections/D7QYu8.pickle
-stored_files/projections/dGjrKo.pickle
-stored_files/projections/dKAFze.pickle
-stored_files/projections/dLfqsV.pickle
-stored_files/projections/DsCbxu.pickle
-stored_files/projections/dVtYH6.pickle
-stored_files/projections/dywT04.pickle
-stored_files/projections/EbTR4k.pickle
-stored_files/projections/ebXh78.pickle
-stored_files/projections/eqBKtE.pickle
-stored_files/projections/eqXAhs.pickle
-stored_files/projections/eUNvLM.pickle
-stored_files/projections/FclYyX.pickle
-stored_files/projections/foVjyB.pickle
-stored_files/projections/fzJ04g.pickle
-stored_files/projections/G0bsXB.pickle
-stored_files/projections/gdsTKm.pickle
-stored_files/projections/Gl0yNd.pickle
-stored_files/projections/gnTRrW.pickle
-stored_files/projections/gy2DPf.pickle
-stored_files/projections/HdxYno.pickle
-stored_files/projections/HMAPva.pickle
-stored_files/projections/HSif53.pickle
-stored_files/projections/HW89K8.pickle
-stored_files/projections/iaYI1k.pickle
-stored_files/projections/ieEaly.pickle
-stored_files/projections/Ihqor1.pickle
-stored_files/projections/J0qBFo.pickle
-stored_files/projections/juFKbf.pickle
-stored_files/projections/kErkPV.pickle
-stored_files/projections/KesM4Z.pickle
-stored_files/projections/keyxeX.pickle
-stored_files/projections/kHpbay.pickle
-stored_files/projections/kjoX6w.pickle
-stored_files/projections/KMClyw.pickle
-stored_files/projections/KnhmOu.pickle
-stored_files/projections/L3eAuN.pickle
-stored_files/projections/L7neve.pickle
-stored_files/projections/Le9IYa.pickle
-stored_files/projections/lJUE9y.pickle
-stored_files/projections/lLB0ix.pickle
-stored_files/projections/lvHRMF.pickle
-stored_files/projections/LZlf6C.pickle
-stored_files/projections/m9njec.pickle
-stored_files/projections/MD5puh.pickle
-stored_files/projections/mhclgW.pickle
-stored_files/projections/mmSnCx.pickle
-stored_files/projections/N3Fa7r.pickle
-stored_files/projections/N7aqs4.pickle
-stored_files/projections/NfbiOb.pickle
-stored_files/projections/Ngjs9A.pickle
-stored_files/projections/nLeWPn.pickle
-stored_files/projections/NMS8zC.pickle
-stored_files/projections/oGLHnc.pickle
-stored_files/projections/ohdVKy.pickle
-stored_files/projections/OlrBYd.pickle
-stored_files/projections/omPuIz.pickle
-stored_files/projections/oYRFyC.pickle
-stored_files/projections/p88hfA.pickle
-stored_files/projections/pBLZe0.pickle
-stored_files/projections/PvrBrA.pickle
-stored_files/projections/qbeDIh.pickle
-stored_files/projections/qOjP9F.pickle
-stored_files/projections/QUIkzs.pickle
-stored_files/projections/R6shfB.pickle
-stored_files/projections/rMzbOB.pickle
-stored_files/projections/Ry9Cf3.pickle
-stored_files/projections/ryFVr8.pickle
-stored_files/projections/S3GdlI.pickle
-stored_files/projections/SyTzPT.pickle
-stored_files/projections/THgrae.pickle
-stored_files/projections/TIKG90.pickle
-stored_files/projections/tJMMyz.pickle
-stored_files/projections/UWO7xv.pickle
-stored_files/projections/uxjaNf.pickle
-stored_files/projections/Vi3r0O.pickle
-stored_files/projections/VtnmsY.pickle
-stored_files/projections/WeFB5B.pickle
-stored_files/projections/wGEv6w.pickle
-stored_files/projections/WnSnYP.pickle
-stored_files/projections/X5euPQ.pickle
-stored_files/projections/x6WR2n.pickle
-stored_files/projections/XrKMq3.pickle
-stored_files/projections/xygRv1.pickle
-stored_files/projections/y8gK8P.pickle
-stored_files/projections/YdbJW8.pickle
-stored_files/projections/yeRin9.pickle
-stored_files/projections/YlIFMi.pickle
-stored_files/projections/YVTnm2.pickle
-stored_files/projections/YYGzM4.pickle
-stored_files/projections/ZIYHxs.pickle
-stored_files/projections/ZLLUub.pickle
-stored_files/projections/ztNYhR.pickle
-stored_files/projections/Zu9f5q.pickle
+stored_files/
